added support for disable field (readonly)

--- a/src/app/+step1/step1.component.html
+++ b/src/app/+step1/step1.component.html
@@ -52,5 +52,12 @@
       (value)="update($event.field, $event.value)" [ngModel]="selectedArea"></form-field>  
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-sm-4">
+      <form-field [field]="fm.getField('output_counciltax_liability')"
+      (value)="update($event.field, $event.value)"></form-field>  
+    </div>
+  </div>
     
 </form>
