--- a/src/app/+step2/step2.component.html
+++ b/src/app/+step2/step2.component.html
@@ -4,9 +4,16 @@
 
   <div class="row">
     <div class="col-sm-4">
-			<form-field [field]="fm.getField('input_dependants')"
-			(value)="update($event.field, $event.value)"></form-field>
-		</div>
+		<form-field [field]="fm.getField('input_rental_period')"
+		(value)="update($event.field, $event.value)"></form-field>
+	</div>
+  </div>
+  
+  <div class="row">
+    <div class="col-sm-4">
+		<form-field [field]="fm.getField('input_dependants')"
+		(value)="update($event.field, $event.value)"></form-field>
+	</div>
   </div>
 
 	<!-- the ngIf is a possible? performance attribute added to
